quick change to eda

--- a/code/asds_eda.ipynb
+++ b/code/asds_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "4      1.057701         0         Valid  61.743056  83.938889  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "4                False   POINT (-122.42311 37.63386)  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tc/ygtvb05s0279mq2rg4cgkqp00000gn/T/ipykernel_71745/3826603841.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/tc/ygtvb05s0279mq2rg4cgkqp00000gn/T/ipykernel_84342/3826603841.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -870,7 +870,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/tc/ygtvb05s0279mq2rg4cgkqp00000gn/T/ipykernel_71745/1587616656.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "/var/folders/tc/ygtvb05s0279mq2rg4cgkqp00000gn/T/ipykernel_84342/1587616656.py:2: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
       "  monthly_means = purple_2023.groupby('MonthName')['PM2.5_EPA'].mean().reset_index()\n"
      ]
     }
@@ -29644,8 +29644,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Location of PurpleAir Monitors"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -29669,6 +29676,13 @@
     "ax = purple_gdf.to_crs('EPSG:3857').plot(figsize=(10, 10), edgecolor='k')\n",
     "cx.add_basemap(ax, source=cx.providers.Esri.WorldStreetMap)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
