--- a/code/clarity.ipynb
+++ b/code/clarity.ipynb
@@ -9400,9 +9400,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "datasci192",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "datasci192"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -9414,7 +9414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
