Visualizations for EPA

--- a/code/predictability.ipynb
+++ b/code/predictability.ipynb
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "93e4d36e",
    "metadata": {},
    "outputs": [
@@ -607,6 +607,7 @@
     }
    ],
    "source": [
+    "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
     "import plotly.graph_objects as go\n",
     "from plotly.offline import plot\n",
