--- a/code/clean_air_data.ipynb
+++ b/code/clean_air_data.ipynb
@@ -2584,7 +2584,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "datasci192",
    "language": "python",
    "name": "python3"
   },
@@ -2598,7 +2598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
