--- a/code/clean_api_purpleair.ipynb
+++ b/code/clean_api_purpleair.ipynb
@@ -1,25 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "008277be",
-   "metadata": {},
-   "source": [
-    "## **Load PurpleAir Data**\n",
-    "\n",
-    "- We can load the PurpleAir Data that we want from the PurpleAir API wrapper that has been built\n",
-    "- Then we can use the clean_purpleair.py file to clean the data for proper analysis"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7247b710",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Proper imports\n",
-    "\n",
     "from purpleair_wrapper import PurpleAirAPI\n",
     "import pandas as pd\n",
     "import os"
@@ -27,12 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "dc0ffd6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set up the API key and endpoint\n",
+    "# Set up API key and endpoint\n",
     "os.environ['PURPLE_AIR_API_KEY'] = \"C8D7497A-2669-11F0-81BE-42010A80001F\"\n",
     "\n",
     "# Create an instance of the PurpleAirAPI class\n",
@@ -41,22 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "6c3a2d5e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Pull the data for monitors we are interested in\n",
+    "# Pull data for monitors of interest\n",
     "purple_df = pd.read_csv('../data/ASDS 2018-2023 for South San Francisco and San Bruno Metadata.csv')\n",
     "sensor_ids = purple_df[\"Site_ID\"].unique().tolist()\n",
-    "\n",
-    "# Fields to pull from the API\n",
-    "fields = [\"pm2.5_atm\", \"humidity\", \"temperature\", \"pressure\"]"
+    "fields = [\"pm2.5_atm\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "ddfc43d1",
    "metadata": {},
    "outputs": [
@@ -165,7 +150,7 @@
     "# Retrieve the PurpleAir data\n",
     "df = client.get_sensor_history(sensor_ids,\n",
     "                               fields=fields,\n",
-    "                               start_time='2024-03-01',\n",
+    "                               start_time='2024-03-31',\n",
     "                               average=1440)\n",
     "\n",
     "df.head()"
@@ -173,28 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3b2aae97",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(9974, 6)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "75552c59",
    "metadata": {},
    "outputs": [
@@ -317,7 +281,7 @@
     }
    ],
    "source": [
-    "# Add the location name of the sensor to the dataframe\n",
+    "# Add column for location names\n",
     "df = df.merge(purple_df[['Site_ID', 'Site_Name', 'Longitude', 'Latitude']], left_on='sensor_index', right_on='Site_ID', how='left')\n",
     "df.rename(columns={'Site_Name': 'sensor_name',\n",
     "                   'Longitude': 'longitude',\n",
@@ -333,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "40684b84",
    "metadata": {},
    "outputs": [],
@@ -366,10 +330,9 @@
     "    'time_stamp': 'time',\n",
     "    'sensor_name': 'location_name',\n",
     "    'sensor_index': 'location_id',\n",
-    "    'pm2.5_atm': 'pm2_5_24h_mean',\n",
-    "    'temperature': 'temp',\n",
-    "    'humidity': 'rh'\n",
+    "    'pm2.5_atm': 'pm2_5_24h_mean'\n",
     "})\n",
+    "\n",
     "# Convert time from Unix timestamp to UTC\n",
     "df['time'] = pd.to_datetime(df['time'], unit='s', utc=True)\n",
     "df['time'] = df['time'].dt.tz_convert('US/Pacific').dt.tz_localize(None)\n",
@@ -382,168 +345,33 @@
     "\n",
     "# Column arrangement\n",
     "df = df[['time', 'location_name', 'location_id', 'latitude', 'longitude',\n",
-    "         'pm2_5_24h_mean', 'pm2_5_24h_mean_aqi',\n",
-    "         'temp', 'rh', 'pressure']]\n",
+    "         'pm2_5_24h_mean', 'pm2_5_24h_mean_aqi']]\n",
     "\n",
     "# Sort\n",
-    "df = df.sort_values('time')\n"
+    "df = df.sort_values('time')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "93aacdbe",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>location_name</th>\n",
-       "      <th>location_id</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>pm2_5_24h_mean</th>\n",
-       "      <th>pm2_5_24h_mean_aqi</th>\n",
-       "      <th>temp</th>\n",
-       "      <th>rh</th>\n",
-       "      <th>pressure</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2024-02-29 08:00:00</td>\n",
-       "      <td>Grundy Park</td>\n",
-       "      <td>21427</td>\n",
-       "      <td>37.622585</td>\n",
-       "      <td>-122.420970</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>60.976</td>\n",
-       "      <td>61.451</td>\n",
-       "      <td>1012.084</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6582</th>\n",
-       "      <td>2024-02-29 08:00:00</td>\n",
-       "      <td>Shelter Crik</td>\n",
-       "      <td>113144</td>\n",
-       "      <td>37.620020</td>\n",
-       "      <td>-122.427620</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>58.988</td>\n",
-       "      <td>60.765</td>\n",
-       "      <td>1008.262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5674</th>\n",
-       "      <td>2024-02-29 08:00:00</td>\n",
-       "      <td>terra</td>\n",
-       "      <td>109718</td>\n",
-       "      <td>37.669968</td>\n",
-       "      <td>-122.421530</td>\n",
-       "      <td>0.89</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>61.047</td>\n",
-       "      <td>59.685</td>\n",
-       "      <td>1005.107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5945</th>\n",
-       "      <td>2024-02-29 08:00:00</td>\n",
-       "      <td>Belle Air</td>\n",
-       "      <td>111235</td>\n",
-       "      <td>37.631878</td>\n",
-       "      <td>-122.409966</td>\n",
-       "      <td>1.16</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6159</th>\n",
-       "      <td>2024-02-29 08:00:00</td>\n",
-       "      <td>Crestmoor III</td>\n",
-       "      <td>111498</td>\n",
-       "      <td>37.616806</td>\n",
-       "      <td>-122.431000</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>58.963</td>\n",
-       "      <td>64.513</td>\n",
-       "      <td>1006.470</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    time  location_name  location_id   latitude   longitude  \\\n",
-       "0    2024-02-29 08:00:00    Grundy Park        21427  37.622585 -122.420970   \n",
-       "6582 2024-02-29 08:00:00   Shelter Crik       113144  37.620020 -122.427620   \n",
-       "5674 2024-02-29 08:00:00          terra       109718  37.669968 -122.421530   \n",
-       "5945 2024-02-29 08:00:00      Belle Air       111235  37.631878 -122.409966   \n",
-       "6159 2024-02-29 08:00:00  Crestmoor III       111498  37.616806 -122.431000   \n",
-       "\n",
-       "      pm2_5_24h_mean  pm2_5_24h_mean_aqi    temp      rh  pressure  \n",
-       "0               0.21                 1.0  60.976  61.451  1012.084  \n",
-       "6582            0.00                 0.0  58.988  60.765  1008.262  \n",
-       "5674            0.89                 4.0  61.047  59.685  1005.107  \n",
-       "5945            1.16                 6.0     NaN     NaN       NaN  \n",
-       "6159            1.13                 6.0  58.963  64.513  1006.470  "
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "f5d6df26",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make sure the longitude and latitude are correct\n",
+    "# Check longitude and latitude\n",
     "df['longitude'] = df['longitude'].apply(lambda x: -abs(x))\n",
     "df['latitude'] = df['latitude'].apply(lambda x: abs(x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "c7d3e363",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save the data to a CSV file\n",
-    "df.to_csv('../data/purpleair_2024-03-01.csv', index=False)"
+    "df.to_csv('../data/clean_api_purpleair.csv', index=False)"
    ]
   }
  ],
