Added comments for consistency

--- a/code/clean_api_purpleair.ipynb
+++ b/code/clean_api_purpleair.ipynb
@@ -3,7 +3,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7247b710",
+   "id": "2b5abe9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "PurpleAir API Data Collection and Processing\n",
+    "\n",
+    "This script retrieves historical PM2.5 data from selected PurpleAir sensors and prepares it for analysis.\n",
+    "\n",
+    "It performs the following steps:\n",
+    "- Loads metadata for sensors in South San Francisco and San Bruno.\n",
+    "- Fetches sensor data via the PurpleAir API.\n",
+    "- Merges data with site metadata (e.g. name, coordinates).\n",
+    "- Converts timestamps and rounds PM2.5 values.\n",
+    "- Calculates AQI from PM2.5 concentrations.\n",
+    "- Cleans and formats the dataset for downstream use.\n",
+    "\n",
+    "The output is a structured CSV file with hourly PM2.5 and AQI data for each location.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e0ae97a",
    "metadata": {},
    "outputs": [],
    "source": [
