Rearrange some files

--- a/code/figures/data_analysis_geo.ipynb
+++ b/code/figures/data_analysis_geo.ipynb
@@ -241,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_tracts = gpd.read_file('../shapefiles/tl_2024_06_tract.shp')\n",
+    "census_tracts = gpd.read_file('../../shapefiles/tl_2024_06_tract.shp')\n",
     "census_tracts['tract'] = census_tracts['NAME'].astype(float)"
    ]
   },
@@ -270,7 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hri = pd.read_csv('../data/health_risk_index.csv')"
+    "hri = pd.read_csv('../../data/health_risk_index.csv')"
    ]
   },
   {
@@ -330,7 +330,7 @@
     "ax.set_yticks([])\n",
     "ax.set_xticks([])\n",
     "\n",
-    "fig.savefig('../figures/health_risk_map.png')"
+    "fig.savefig('../../figures/health_risk_map.png')"
    ]
   },
   {
@@ -348,8 +348,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_asds = gpd.read_file('../data/Daily ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
-    "hourly_asds = gpd.read_file('../data/Hourly ASDS 2018-2023 for South San Francisco San Bruno.csv')"
+    "daily_asds = gpd.read_file('../../data/Daily ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
+    "hourly_asds = gpd.read_file('../../data/Hourly ASDS 2018-2023 for South San Francisco San Bruno.csv')"
    ]
   },
   {
@@ -359,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metadata = gpd.read_file('../data/ASDS 2018-2023 for South San Francisco and San Bruno Metadata.csv', GEOM_POSSIBLE_NAMES=\"geometry\", KEEP_GEOM_COLUMNS=\"NO\")\n",
+    "metadata = gpd.read_file('../../data/ASDS 2018-2023 for South San Francisco and San Bruno Metadata.csv', GEOM_POSSIBLE_NAMES=\"geometry\", KEEP_GEOM_COLUMNS=\"NO\")\n",
     "metadata['sensor_type'] = 'purple'"
    ]
   },
@@ -398,7 +398,7 @@
     }
    ],
    "source": [
-    "clarity_data = gpd.read_file('../data/Hourly Clarity Data 1-24 to 1-25.csv')"
+    "clarity_data = gpd.read_file('../../data/Hourly Clarity Data 1-24 to 1-25.csv')"
    ]
   },
   {
