--- a/code/figures/data_analysis_geo_clarity.ipynb
+++ b/code/figures/data_analysis_geo_clarity.ipynb
@@ -93,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "census_tracts = gpd.read_file('../shapefiles/tl_2024_06_tract.shp')\n",
+    "census_tracts = gpd.read_file('../../shapefiles/tl_2024_06_tract.shp')\n",
     "census_tracts['NAME'] = census_tracts['NAME'].astype(str)"
    ]
   },
@@ -114,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clarity_data = gpd.read_file('../data/risesouthcity_clarity_24hmean_cleaned.csv')"
+    "clarity_data = gpd.read_file('../../data/risesouthcity_clarity_24hmean_cleaned.csv')"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "health_ins_coverage = gpd.read_file('../data/ACSST5Y2023.S2701-Data.csv')[1:]"
+    "health_ins_coverage = gpd.read_file('../../data/ACSST5Y2023.S2701-Data.csv')[1:]"
    ]
   },
   {
