--- a/code/figures/data_analysis.ipynb
+++ b/code/figures/data_analysis.ipynb
@@ -20,9 +20,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_asds = pd.read_csv('../data/Daily ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
-    "hourly_asds = pd.read_csv('../data/Hourly ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
-    "metadata = pd.read_csv('../data/ASDS 2018-2023 for South San Francisco and San Bruno Metadata.csv')"
+    "daily_asds = pd.read_csv('../../data/Daily ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
+    "hourly_asds = pd.read_csv('../../data/Hourly ASDS 2018-2023 for South San Francisco San Bruno.csv')\n",
+    "metadata = pd.read_csv('../../data/ASDS 2018-2023 for South San Francisco and San Bruno Metadata.csv')"
    ]
   },
   {
@@ -1810,7 +1810,7 @@
     "    cache_frame_data=False\n",
     ")\n",
     "\n",
-    "anim.save('../figures/Movie.mp4')"
+    "anim.save('../../figures/Movie.mp4')"
    ]
   },
   {
@@ -2424,7 +2424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
