censor api key's

--- a/code/preprocessing/clean_api_purpleair.ipynb
+++ b/code/preprocessing/clean_api_purpleair.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Set up API key and endpoint\n",
-    "os.environ['PURPLE_AIR_API_KEY'] = \"C8D7497A-2669-11F0-81BE-42010A80001F\"\n",
+    "os.environ['PURPLE_AIR_API_KEY'] = # INSERT YOUR API KEY HERE\n",
     "\n",
     "# Create an instance of the PurpleAirAPI class\n",
     "client = PurpleAirAPI()"
